<resources>
    <string name="app_name">Chips</string>
    <string name="dismiss">DISMISS</string>
    <string name="token_id">Token ID</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="payment_status">Payment Status</string>
    <string name="item_description">Item description</string>
    <string name="item_amount">Item amount</string>
    <string name="payee_reference">Payee reference</string>
    <string name="item_desc">\"Item Description: \"</string>
    <string name="amount_shown">Amount $358</string>
    <string name="item_dec">Basket</string>
    <string name="expiry_date">22-12-12</string>
    <string name="site_ref">Site Ref</string>
    <string name="trans_amount">Amount</string>
    <string name="trans_button_proceed">Proceed</string>
    <string name="transactions_history">Transactions History</string>
    <string name="trans_payments_history">Payments History</string>
    <string name="fee_amount">Fee Amount</string>
    <string name="vat_amount">VAT Amount</string>
    <string name="amount">Amount</string>
    <string name="gratuity_amount">Gratuity amount</string>
    <string name="payee_ref_info">Payee Ref info</string>
    <string name="request_id">Request ID</string>
    <string name="scan_to_pay">SCAN TO PAY</string>
    <string name="enabled_by">Enabled By</string>
</resources>